# Magic_Hat

cpp_rewrite/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
cpp_rewrite/devel/lib/pkgconfig/: cpp_rewrite.pc  teleop_twist_keyboard_cpp.pc
cpp_rewrite/devel/share/teleop_twist_keyboard_cpp/cmake/: teleop_twist_keyboard_cppConfig.cmake
cpp_rewrite/src/teleop_twist_keyboard_cpp/: CMakeLists.txt
cpp_rewrite/src/teleop_twist_keyboard_cpp/src/: VRPNtest  VRPNtest.cpp  a.out  global_key_variables.cpp  global_key_variables.h  global_key_variables.h.gch  teleop_twist_keyboard.cpp  teleop_twist_keyboard_Xversion.cpp
devel/lib/teleop_twist_keyboard_cpp/: teleop_twist_keyboard
devel/share/cpp_rewrite/cmake/: cpp_rewriteConfig.cmake
